fix: return dataset as numjs ndarray, add get_modified endpoint
