# apps/simdata-api/simdata_api/datamodels.py
@@ -1,4 +1,6 @@
-from typing import List
+from datetime import datetime
+from enum import Enum
+from typing import List, Literal, Optional
 
 from pydantic import BaseModel
 
@@ -6,3 +8,12 @@ from pydantic import BaseModel
 class DatasetData(BaseModel):
     shape: List[int]
     values: List[float]
+
+
+class Status(str, Enum):
+    ok = "ok"
+    error = "error"
+
+
+class StatusResponse(BaseModel):
+    status: Status
